--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "autoprefixer": "^10.4.15",
     "electron": "^24.4.0",
     "electron-builder": "^23.6.0",
+    "eslint": "^8.47.0",
+    "eslint-plugin-vue": "^9.17.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
