--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "electron-store": "^8.1.0",
+    "pinia": "^2.1.6",
     "vue": "^3.2.47"
   },
   "devDependencies": {
